--- a/app/components/app-component/app-component-template.html
+++ b/app/components/app-component/app-component-template.html
@@ -2,7 +2,7 @@
   <section class="blue-gradient-background intro-splash splash">
     <div class="container center-all-container">
       <h1 class="white light splash-title">
-        Pusher Vue.js Realtime Demo
+        Tildefind Vue.js Realtime Demo
       </h1>
 
       <p class="white light splash-subtitle">
